# meeting-cost-tracker

./: .meeting-cost-tracker.yaml.example  README.md  SECURITY.md  invoke.ps1  pyproject.toml  sonar-project.properties
docs/: README.md  index.html  styles.css
src/meeting_cost_tracker/: __init__.py  __main__.py  calculator.py  cli.py  config.py  graph_client.py  reporter.py
